fix the z-index of modal, loading and warning

--- a/src/stylesheets/modal.less
+++ b/src/stylesheets/modal.less
@@ -3,6 +3,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 5;
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.1);
